<resources>
    <string name="app_name">Catch The Ball</string>
    <string name="score">Score : %d</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="high_score">High Score : %d</string>
    <string name="result_score">%d</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again</string>
    <string name="_30_point">30 point</string>
    <string name="_10_point">10 point</string>
    <string name="start">Start</string>


</resources>