<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".activity.ResultActivity"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textAllCaps="true"
            android:textSize="@dimen/_25ssp"
            />

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_score"
            android:layout_marginTop="@dimen/_60sdp"
            android:textAllCaps="true"
            android:textSize="@dimen/_30ssp"
            />

        <TextView
            android:id="@+id/highScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAllCaps="true"
            android:textSize="@dimen/_20ssp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/try_again"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>